Clase07/despliegue-azure/backend1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend1-app
  labels:
    app: backend1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend1-app
  template:
    metadata:
      labels:
        app: backend1-app
    spec:
      containers:
        - name: backend1-container
          image: docker04.azurecr.io/backend1
          imagePullPolicy: Always
          ports:
            - containerPort: 3010
