Clase07/despliegue-azure/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
        - name: frontend-container
          image: docker04.azurecr.io/frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
