Clase07/despliegue-azure/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: frontend-app
